--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
     "ext-curl": "*",
     "ext-json": "*",
     "components/jquery": "^3.7",
-    "twbs/bootstrap": "^5.3"
+    "twbs/bootstrap": "^5.3",
+    "vlucas/phpdotenv": "^5.6"
   },
   "config": {
     "allow-plugins": {
