feat: add PDO extension requirement to composer.json

--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
     "php": ">=7.4",
     "ext-curl": "*",
     "ext-json": "*",
+    "ext-pdo": "*",
     "components/jquery": "^3.7",
     "twbs/bootstrap": "^5.3",
     "vlucas/phpdotenv": "^5.6"
