chore: add application and database configuration options to .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,15 @@
+# Application configuration
+APP_PORT=8010
+UID=1000
+GID=1000
+SWAPI_URL=https://swapi.py4e.com/api/
+#DEBUG=1
 
+# Database configuration
+DB_DRIVER=mysql
+DB_HOST=db
+FORWARD_DB_PORT=3372
+DB_USER=staruser
+DB_PASSWORD=starpassword
+DB_ROOT_PASSWORD=rootpassword
+DB_NAME=starwarsdb
