docs: add API use documentation, detailed installation instructions, and improvements overview

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,8 @@ APP_PORT=8010
 UID=1000
 GID=1000
 SWAPI_URL=https://swapi.py4e.com/api/
+SWAGGER_PORT=8080
+SWAGGER_FILE=./docs/swagger.yaml
 #DEBUG=1
 
 # Database configuration
