chore: update environment configuration for Linux user ownership

--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,10 @@ SWAGGER_PORT=8080
 SWAGGER_FILE=./docs/swagger.yaml
 #DEBUG=1
 
+# Uncomment the following two lines to keep the ownership of files to current user in a linux environment
+# APP_USER=$USER
+# APP_GROUP=$USER
+
 # Database configuration
 DB_DRIVER=mysql
 DB_HOST=db
